Now checking existence of temporary directory before creating PDFs with gift certificates. Promo codes shouldn't work on gift certificates any more. PDFs should correctly display Czech letters.

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -93,6 +93,10 @@
                     {% endif %}
                 </div>
 
+                {% if product.isGiftCertificate %}
+                    <div class="in-message--info">{{ 'Tento produkt je dárkovým kupónem, tudíž na něj nelze aplikovat žádné slevy.' }}</div>
+                {% endif %}
+
                 <div class="box-detail__wrap">
                     <div class="box-detail__add-basket">
                         <div>
