--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -154,9 +154,13 @@
 
             &--level-1 {
                 color: @color-f;
-                font-size: 16px;
+                font-size: @font-size;
                 font-weight: 700;
                 text-transform: uppercase;
+
+                @media @query-xl {
+                    font-size: 16px;
+                }
 
                 &:hover {
                     color: @color-f;
