--- a/src/Resources/styles/front/common/layout/layout.less
+++ b/src/Resources/styles/front/common/layout/layout.less
@@ -92,6 +92,20 @@ img {
             border-radius: @radius-big;
         }
 
+        &--footer {
+            margin: 0;
+
+            @media @query-lg {
+                margin: 0 @web-padding-small;
+                
+                border-radius: @radius-big;
+            }
+
+            @media @query-xl {
+                margin: 0 auto;
+            }
+        }
+
         &--header {
             padding: 0;
             margin: 0;
