--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -4,7 +4,6 @@
 @list-menu-columns-gap: 30px;
 @list-menu-columns-gap-small: 16px;
 @list-menu-item-height: 36px;
-@list-menu-item-footer-gap: 47px;
 @list-menu-item-link-padding: 15px;
 
 // global settings
@@ -35,25 +34,32 @@
     &--footer {
         display: none;
         margin: 0;
+        padding-left: 20px;
+
+        &:last-child {
+            margin-bottom: 20px;
+
+            @media @query-lg {
+                margin-bottom: 0;
+            }
+        }
 
         @media @query-lg {
             flex: 1;
             display: block !important;
+            padding-left: 0;
         }
     }
 
     &__column {
         .reset-ul();
         width: 100%;
-        margin-bottom: 15px;
 
         @media @query-lg {
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             flex-wrap: wrap;
             width: auto;
-            margin-left: -@list-menu-item-footer-gap;
-            margin-bottom: 0;
         }
     }
 
@@ -81,7 +87,6 @@
         .list-menu--footer & {
             @media @query-lg {
                 width: auto;
-                margin-left: @list-menu-item-footer-gap;
             }
         }
 
@@ -173,6 +178,7 @@
 
             .list-menu--footer & {
                 padding: 0;
+                line-height: 30px;
 
                 font-size: @font-size-small;
             }
