--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -4,81 +4,83 @@
             {% set domainId = getDomain().id %}
 
             <div class="web__line">
-                <div class="web__container web__container--light web__container--border-radius-bottom">
+                <div class="web__container web__container--light web__container--footer">
                     <div class="footer-top">
-                        <div class="footer-top__info">
-                            <div class="footer-top__socials">
-                                <ul class="list-socials">
-                                    <li class="list-socials__item">
-                                        <a class="list-socials__item__link btn-gradient" href="https://www.instagram.com/shopsyscz/" target="_blank">
-                                            <span class="btn-gradient__in">{{ 'Instagram'|trans }}</span>
-                                        </a>
-                                    </li>
-                                    <li class="list-socials__item">
-                                        <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/shopsyscz/" target="_blank">
-                                            {{ 'Facebook'|trans }}
-                                        </a>
-                                    </li>
-                                    <li class="list-socials__item">
-                                        <a class="list-socials__item__link list-socials__item__link--youtube btn-with-border" href="https://www.youtube.com/user/netdevelo" target="_blank">
-                                            {{ 'Youtube'|trans }}
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="footer-top__contact">
-                                <div class="box-contact">
-                                    <div class="box-contact__block">
-                                        <div class="box-contact__block__text">
-                                            {% include 'Front/Svg/phone.svg' %}
-                                            {{ 'Volejte na '|trans }}
-                                            <a href="tel:{{ getShopInfoPhoneNumber() }}">
-                                                {{ getShopInfoPhoneNumber() }}
-                                            </a>
-                                        </div>
-                                        <div class="box-contact__block__info">
-                                            {{ getShopInfoPhoneHours() }}
+                        <div class="footer-top__scroll-top">
+                            <a href="#top" class="btn btn--secondary btn--big js-scroll-to-position">
+                                <i class="footer-top__scroll-top__button-icon svg svg-triangle"></i>
+                                {{ 'Přesunout nahoru'|trans }}
+                            </a>
+                        </div>
+
+                        <div class="footer-top__wrap">
+                            <div class="footer-top__links">
+                                <div class="footer-top__links__column js-footer-link-wrapper">
+                                    <div class="footer-top__links__title js-footer-link-title">
+                                        {{ 'Naše služby'|trans }}
+                                        <div class="footer-top__links__title__arrow">
+                                            <i class="svg svg-triangle"></i>
                                         </div>
                                     </div>
-                                    <div class="box-contact__block">
-                                        <div class="box-contact__block__text">
-                                            <i class="svg svg-mail"></i>
-                                            <a href="mailto:{{ getShopInfoEmail() }}">{{ getShopInfoEmail() }}</a>
+                                    {{ render(controller('App\\Controller\\Front\\ArticleController:footerMenuAction', { placement: constant('App\\Model\\Article\\Article::PLACEMENT_ABOUT') } )) }}
+                                    {{ render(controller('App\\Controller\\Front\\ArticleController:footerMenuAction', { placement: constant('App\\Model\\Article\\Article::PLACEMENT_SERVICES') } )) }}
+                                </div>
+                                <div class="footer-top__links__column js-footer-link-wrapper">
+                                    <div class="footer-top__links__title js-footer-link-title">
+                                        {{ 'O nákupu'|trans }}
+                                        <div class="footer-top__links__title__arrow">
+                                            <i class="svg svg-triangle"></i>
                                         </div>
-                                        <div class="box-contact__block__info">
-                                            {{ 'Odpovíme Vám v co nejkratší možné době.'|trans }}
-                                        </div>
+                                    </div>
+                                    {{ render(controller('App\\Controller\\Front\\ArticleController:footerMenuAction', { placement: constant('App\\Model\\Article\\Article::PLACEMENT_SHOPPING') } )) }}
+                                </div>
+                            </div>
+
+                            <div class="footer-top__info">
+                                <div class="footer-top__socials">
+                                    <ul class="list-socials">
+                                        <li class="list-socials__item">
+                                            <a class="list-socials__item__link list-socials__item__link--instagram btn-gradient" href="https://www.instagram.com/shopsyscz/" target="_blank">
+                                                <span class="btn-gradient__in">{{ 'Instagram'|trans }}</span>
+                                            </a>
+                                        </li>
+                                        <li class="list-socials__item">
+                                            <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/shopsyscz/" target="_blank">
+                                                {{ 'Facebook'|trans }}
+                                            </a>
+                                        </li>
+                                        <li class="list-socials__item">
+                                            <a class="list-socials__item__link list-socials__item__link--youtube btn-with-border" href="https://www.youtube.com/user/netdevelo" target="_blank">
+                                                {{ 'Youtube'|trans }}
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="footer-top__contact">
+                                    <div class="footer-top__contact__text-top">
+                                        {{ 'Volejte na '|trans }}
+                                        <a class="footer-top__contact__link" href="tel:{{ getShopInfoPhoneNumber() }}">{{ getShopInfoPhoneNumber() }}</a>
+                                        {{ 'nebo pište na'|trans }}
+                                        <a class="footer-top__contact__link" href="mailto:{{ getShopInfoEmail() }}">{{ getShopInfoEmail() }}</a>
+                                    </div>
+                                    <div class="footer-top__contact__text-bottom">
+                                        {{ 'Na e-maily a telefony odpovídáme v pracovní dny 9–12 a 13–16 hodin.'|trans }}
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="footer-top__links">
-                            <div class="footer-top__links__column js-footer-link-wrapper">
-                                <div class="footer-top__links__title js-footer-link-title">
-                                    {{ 'O nás'|trans }}
-                                    <div class="footer-top__links__title__arrow">
-                                        <i class="svg svg-arrow"></i>
-                                    </div>
-                                </div>
-                                {{ render(controller('App\\Controller\\Front\\ArticleController:footerMenuAction', { placement: constant('App\\Model\\Article\\Article::PLACEMENT_ABOUT') } )) }}
+
+                        <div class="footer-banner">
+                            <div class="footer-banner__left">
+                                <h2 class="footer-banner__title">
+                                    {{ 'Čeká na vás 500 m²,<br> kde si určitě vyberete.'|trans|raw }}
+                                </h2>
+                                <a class="footer-banner__button btn-gradient btn-gradient--green" href="">
+                                    <span class="btn-gradient__in">{{ 'Naše prodejna'|trans }}</span>
+                                </a>
                             </div>
-                            <div class="footer-top__links__column js-footer-link-wrapper">
-                                <div class="footer-top__links__title js-footer-link-title">
-                                    {{ 'Naše služby'|trans }}
-                                    <div class="footer-top__links__title__arrow">
-                                        <i class="svg svg-arrow"></i>
-                                    </div>
-                                </div>
-                                {{ render(controller('App\\Controller\\Front\\ArticleController:footerMenuAction', { placement: constant('App\\Model\\Article\\Article::PLACEMENT_SERVICES') } )) }}
-                            </div>
-                            <div class="footer-top__links__column js-footer-link-wrapper">
-                                <div class="footer-top__links__title js-footer-link-title">
-                                    {{ 'O nákupu'|trans }}
-                                    <div class="footer-top__links__title__arrow">
-                                        <i class="svg svg-arrow"></i>
-                                    </div>
-                                </div>
-                                {{ render(controller('App\\Controller\\Front\\ArticleController:footerMenuAction', { placement: constant('App\\Model\\Article\\Article::PLACEMENT_SHOPPING') } )) }}
+                            <div class="footer-banner__right">
+                                <p class="footer-banner__text">{{ 'Na naší prodejně v Liberci najdete aktuálního mistra světa v chytání ryb na lodi. Na starosti má celou prodejnu včetně kolegů. Tak kvalitní rady nikde jinde nedostanete.'|trans }}</p>
                             </div>
                         </div>
                     </div>
@@ -88,8 +90,21 @@
 
         <div class="web__line">
             <footer class="web__container web__container--transparent footer-bottom">
+                <div class="footer-bottom__domains js-not-implemented-yet">
+                    <div class="footer-bottom__domains__item">
+                        <img class="footer-bottom__domains__item__icon" src="{{ asset('assets/frontend/images/slovakia.png') }}" alt="{{ 'Slovakia'|trans }}"/>
+                        <a class="footer-bottom__domains__item__link" href="">{{ 'Tovar na Slovensko'|trans }}</a>
+                    </div>
+                    <div class="footer-bottom__domains__item">
+                        <img class="footer-bottom__domains__item__icon" src="{{ asset('assets/frontend/images/slovakia.png') }}" alt="{{ 'Slovakia'|trans }}"/>
+                        <a class="footer-bottom__domains__item__link" href="">{{ 'International orders'|trans }}</a>
+                    </div>
+                </div>
                 <div class="footer-bottom__copyright dont-print">
-                    {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Shopsys s.r.o. Všechna práva vyhrazena.'|trans }}
+                    {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Tropic Fishing s.r.o. Všechna práva vyhrazena.'|trans }}
+                </div>
+                <div class="footer-bottom__rules">
+                    {{ 'Podle zákona o evidenci tržeb je prodávající povinen vystavit kupujícímu účtenku. Zároveň je povinen zaevidovat přijatou tržbu u správce daně online; v případě technického výpadku pak nejpozději do 48 hodin.'|trans }}
                 </div>
                 <div class="footer-bottom__shopsys dont-print">
                     {{ 'E-shop na míru od'|trans }}
