--- a/templates/Styleguide/styleguide.html.twig
+++ b/templates/Styleguide/styleguide.html.twig
@@ -320,11 +320,13 @@
 
                         <a href="#buttons" class="btn">Default button</a> &nbsp;
                         <a href="#buttons" class="btn btn--success">Success button</a> &nbsp;
+                        <a href="#buttons" class="btn btn--secondary">Secondary button</a> &nbsp;
                         <a href="#buttons" class="btn-with-border">Button with border</a> &nbsp;
                         <a href="#buttons" class="btn btn--disabled">Disabled</a> &nbsp;
                         <a href="#buttons" class="btn-no-style">No style</a> &nbsp;
                         <br><br>
                         <a href="#buttons" class="btn">Primary</a> &nbsp;
+                        <a href="#buttons" class="btn btn--big">Primary big</a> &nbsp;
                         <a href="#buttons" class="btn btn--large">Primary large</a> &nbsp;
                         <br><br>
                         <a href="#buttons" class="btn btn--full-width">Full width</a> &nbsp;
@@ -349,16 +351,21 @@
                         <a href="#buttons" class="btn-gradient">
                             <span class="btn-gradient__in">Instagram</spam>
                         </a> &nbsp;
+                        <a href="#buttons" class="btn-gradient btn-gradient--green">
+                            <span class="btn-gradient__in">Naše prodejna</spam>
+                        </a> &nbsp;
 
                         <div class="styleguide-module__editor">
                             <textarea class="codemirror-html" id="html-buttons">
 <a href="#buttons" class="btn">Default button</a> &nbsp;
 <a href="#buttons" class="btn btn--success">Success button</a> &nbsp;
+<a href="#buttons" class="btn btn--secondary">Secondary button</a> &nbsp;
 <a href="#buttons" class="btn-with-border">Button with border</a> &nbsp;
 <a href="#buttons" class="btn btn--disabled">Disabled</a> &nbsp;
 <a href="#buttons" class="btn-no-style">No style</a> &nbsp;
 
 <a href="#buttons" class="btn">Primary</a> &nbsp;
+<a href="#buttons" class="btn btn--big">Primary big</a> &nbsp;
 <a href="#buttons" class="btn btn--large">Primary large</a> &nbsp;
 
 <a href="#buttons" class="btn btn--full-width">Full width</a> &nbsp;
@@ -382,6 +389,9 @@
 
 <a href="#buttons" class="btn-gradient">
     <span class="btn-gradient__in">Instagram</spam>
+</a>
+<a href="#buttons" class="btn-gradient btn-gradient--green">
+    <span class="btn-gradient__in">Naše prodejna</spam>
 </a>
                             </textarea>
                         </div>
