--- a/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
+++ b/templates/Mail/Order/GiftCertificate/giftCertificate.html.twig
@@ -5,7 +5,9 @@
 <body style="font-family: Firefly, DejaVu Sans, sans-serif;">
     <h1>Tropic Fishing</h1>
     <h2>{{ 'Dárkový poukaz'|trans }}</h2>
-    <b>{{ giftCertificateCode }}</b>
-    Hodnota: <b>{{ giftCertificateValue|priceWithCurrency(giftCertificateCurrency) }}</b>
+    <p>
+        <b>{{ giftCertificateCode }}</b>
+    </p>
+    <p>Hodnota: <b>{{ giftCertificateValue|priceWithCurrency(giftCertificateCurrency) }}</b></p>
 </body>
 </html>
