--- a/templates/Front/Content/Product/detail.html.twig
+++ b/templates/Front/Content/Product/detail.html.twig
@@ -22,7 +22,7 @@
     <div class="web__line">
         <div class="web__container">
             <div itemscope itemtype="http://schema.org/Product">
-                {{ boxDetail.productBox(product, productMainCategory, true, youtubeDetails, productSizeArticleId, loyaltyProgramArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains) }}
+                {{ boxDetail.productBox(product, productMainCategory, true, youtubeDetails, productSizeArticleId, loyaltyProgramArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText) }}
             </div>
         </div>
     </div>
