--- a/src/Resources/styles/front/common/layout/header/cart.less
+++ b/src/Resources/styles/front/common/layout/header/cart.less
@@ -22,6 +22,10 @@
             text-transform: none;
             font-size: 16px;
         }
+
+        &__currency {
+            text-transform: uppercase;
+        }
     }
 
     &__icon {
@@ -32,7 +36,7 @@
         @media @query-lg {
             float: left;
             width: 20px;
-            margin-left: -9px;
+            margin-right: 9px;
         }
 
         .svg-icon {
