--- a/templates/Front/Inline/Cart/cartBox.html.twig
+++ b/templates/Front/Inline/Cart/cartBox.html.twig
@@ -18,7 +18,7 @@
                 {% if cart is null %}
                     {{ 'Prázdný'|trans }}
                 {% else %}
-                    {{ productsPrice.priceWithVat|price }}
+                    <span class="cart__info__currency">{{ productsPrice.priceWithVat|price }}</span>
                 {% endif %}
             </span>
             {% if cart is not null %}
