--- a/src/Resources/styles/front/common/core/form/btn.less
+++ b/src/Resources/styles/front/common/core/form/btn.less
@@ -132,7 +132,7 @@
     line-height: @btn-with-border-height - (@btn-with-border-size-border * 2);
     vertical-align: middle;
     display: inline-block;
-    transition: @transition background, @transition color;
+    transition: none;
     text-align: center;
 
     border-radius: @radius;
