--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -47,7 +47,7 @@
                 width: 96px;
                 height: 57px;
 
-                background: url(../images/footer-right-top-corner.png);
+                background: url('@{path-design}/footer-right-top-corner.png');
             }
 
             &:after {
@@ -58,7 +58,7 @@
                 width: 59px;
                 height: 33px;
 
-                background: url(../images/footer-right-bottom-corner.png);
+                background: url('@{path-design}/footer-right-bottom-corner.png');
             }
         }
     }
@@ -226,7 +226,7 @@
     padding: 30px 20px;
 
     border-radius: @radius-big;
-    background-color: blue;
+    background-color: @color-base;
 
     @media @query-lg {
         flex-direction: row;
@@ -314,6 +314,10 @@
         &__item {
             display: flex;
             margin-bottom: 10px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
 
             @media @query-lg {
                 margin-left: @footer-bottom-domains-item-gap;
