FE: main variants: "price from" is now displayed properly
- when there are multiple visible variants with different prices, "price from" with the lowest variant price is displayed
- when all the variants have the same price, the price is displayed without "from" label

--- a/templates/Front/Content/Search/autocomplete.html.twig
+++ b/templates/Front/Content/Search/autocomplete.html.twig
@@ -37,7 +37,11 @@
                                 {% if not product.calculatedSellingDenied %}
                                     <span class="search-hint__product__item__price">
                                         {% set sellingPrice = getProductSellingPrice(product) %}
-                                        {{ sellingPrice.priceWithVat|price }}
+                                        {% if sellingPrice.priceFrom %}
+                                            {{ 'from %price%'|trans({'%price%': sellingPrice.priceWithVat|price}) }}
+                                        {% else %}
+                                            {{ sellingPrice.priceWithVat|price }}
+                                        {% endif %}
                                         {% if sellingPrice.isActionPrice %}
                                             <span class="search-hint__product__item__price search-hint__product__item__price--old">
                                                 {{ sellingPrice.defaultProductPrice.priceWithVat|price }}
