--- a/src/Resources/styles/front/common/components/list/socials.less
+++ b/src/Resources/styles/front/common/components/list/socials.less
@@ -16,7 +16,7 @@
         margin-left: -@list-socials-item-gap;
     }
 
-    @media @query-vl {
+    @media @query-xl {
         width: auto;
     }
 
@@ -32,7 +32,7 @@
             margin-left: @list-socials-item-gap;
         }
 
-        @media @query-vl {
+        @media @query-xl {
             width: @list-socials-item-width;
         }
 
