--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -72,8 +72,10 @@
 
         @media @query-lg {
             width: calc(~"100% - @{footer-top-links-width}");
+            min-height: 216px;
             justify-content: center;
             order: 2;
+            padding: 15px 25px;
         }
     }
 
@@ -227,6 +229,7 @@
 
     border-radius: @radius-big;
     background-color: @color-base;
+    box-shadow: 0 10px 20px 0px rgba(0,0,0,0.3);
 
     @media @query-lg {
         flex-direction: row;
