--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -229,7 +229,7 @@
 
     border-radius: @radius-big;
     background-color: @color-base;
-    box-shadow: 0 10px 20px 0px rgba(0,0,0,0.3);
+    box-shadow: 0 10px 20px 0 rgba(0,0,0,0.3);
 
     @media @query-lg {
         flex-direction: row;
