--- a/templates/Front/Content/Order/PromoCode/index.html.twig
+++ b/templates/Front/Content/Order/PromoCode/index.html.twig
@@ -4,7 +4,7 @@
             <label>
                 <input type="checkbox" class="css-checkbox js-promo-code-toggle-checkbox">
                 <span class="css-checkbox__image box-preview__coupone__title__label">
-                    {{ 'Mám slevový poukaz nebo dárkový certifikát'|trans }}
+                    {{ 'Máte slevový kupón?'|trans }}
                 </span>
             </label>
         </div>
