--- a/src/Resources/styles/front/common/core/variables.less
+++ b/src/Resources/styles/front/common/core/variables.less
@@ -6,11 +6,12 @@
 @path-font: '../fonts';
 
 @import url('https://fonts.googleapis.com/css?family=Kanit:300,400,500,600,700&display=swap&subset=latin-ext');
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
+
 
 // Fonts
 @font-base: 'Kanit', sans-serif;
-@font-alt: 'Lato', sans-serif;
+@font-alt: 'Source Sans Pro', sans-serif;
 @font: @font-base;
 
 @font-size-extra-small: 13px;
