resolve merge conflicts in less and twig files

--- a/src/Resources/styles/front/common/components/in/availability.less
+++ b/src/Resources/styles/front/common/components/in/availability.less
@@ -47,7 +47,7 @@
     &__text-big {
         padding: 4px 5px 0 0;
 
-        color: @color-brown-light;
+        //color: @color-brown-light;
         font-size: @font-size-small;
         font-weight: 400;
         white-space: nowrap;
@@ -67,7 +67,7 @@
     &__stores-big {
         padding-top: 4px;
 
-        color: @color-brown-light;
+        //color: @color-brown-light;
         font-size: @font-size-small;
         font-weight: 700;
         white-space: nowrap;
@@ -76,7 +76,7 @@
 
     &__status {
         padding-right: 5px;
-        
+
         font-size: @font-size-big;
         white-space: nowrap;
     }
