--- a/src/Resources/styles/front/common/components/list/accessories-products.less
+++ b/src/Resources/styles/front/common/components/list/accessories-products.less
@@ -75,13 +75,10 @@
     &__item {
         width: calc(~"@{calc-base}/@{list-accessories-products-item-count}");
 
-<<<<<<< HEAD
-        color: @color-brown;
-=======
+        //color: @color-brown;
         &:hover {
             box-shadow: @shadow;
         }
->>>>>>> master
 
         &__in {
             display: flex;
@@ -138,11 +135,9 @@
             padding: 0 15px;
             text-align: center;
 
-<<<<<<< HEAD
-=======
             &__availability {
                 margin-bottom: 10px;
-                
+
                 font-size: @font-size-extra-small;
 
                 .in-badge {
@@ -167,7 +162,6 @@
                 }
             }
 
->>>>>>> master
             &__price {
                 &__item {
                     display: none;
