--- a/src/Resources/styles/front/common/components/list/cart-preview.less
+++ b/src/Resources/styles/front/common/components/list/cart-preview.less
@@ -82,12 +82,8 @@
             margin-bottom: @list-cart-preview-item-gap;
             padding-right: @list-cart-preview-item-gap;
 
-<<<<<<< HEAD
-            color: @color-brown-light;
+            //color: @color-brown-light;
             font-size: @font-size-small;
-=======
-                font-size: @font-size-small;
->>>>>>> master
 
             &:last-child {
                 margin-bottom: 0;
