--- a/src/Resources/styles/front/common/components/in/add-to-cart.less
+++ b/src/Resources/styles/front/common/components/in/add-to-cart.less
@@ -16,13 +16,10 @@
         background-color: darken(@color-add, 5%);
     }
 
-<<<<<<< HEAD
-=======
     @media @query-sm {
         flex-direction: row;
     }
 
->>>>>>> master
     &__spinbox {
         margin-bottom: 10px;
 
@@ -45,7 +42,6 @@
 
             font-size: @font-size-extra-small - 1;
         }
-<<<<<<< HEAD
 
         .svg {
             position: relative;
@@ -56,8 +52,8 @@
 
             .in-add-to-cart--in-product-list & {
                 margin-right: 5px;
-=======
->>>>>>> master
+            }
+        }
 
         &:hover {
             background-color: transparent;
