fixup! Merge branch 'master' into rv-us-7944-merge-b2c

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Form/theme.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Form/theme.html.twig
@@ -67,6 +67,7 @@
            title="{{ attr.iconTitle|default('') }}"
         ></i>
     {% endif %}
+{%- endblock %}
 
 {% block products_list_row -%}
     {% if top_info_title is not empty %}
