[TF-47] FE: order step 3: flash messages are now displayed properly
- the styling of messages was changed in
797ba1a49893f812f245b9469ab93d58b380a2d1, but step 3 was forgotten

--- a/templates/Front/Content/Order/step3.html.twig
+++ b/templates/Front/Content/Order/step3.html.twig
@@ -13,6 +13,7 @@
             <div class="box-order">
                 <div class="box-order__message">
                     {{ form_errors(form) }}
+                    {{ render(controller('App\\Controller\\Front\\FlashMessageController:indexAction')) }}
                 </div>
                 <div class="box-order__wrap">
                     <div class="box-order__info">
