--- a/templates/bundles/ShopsysProductFeedGoogleBundle/feed.xml.twig
+++ b/templates/bundles/ShopsysProductFeedGoogleBundle/feed.xml.twig
@@ -4,7 +4,9 @@
     <item>
         <g:id>{{ item.id }}</g:id>
         <title>{{ item.title }}</title>
-        <g:item_group_id>{{ item.catnum }}</g:item_group_id>
+        {% if item.catnum %}
+            <g:item_group_id>{{ item.catnum }}</g:item_group_id>
+        {% endif %}
         <g:description>{{ item.description|striptags|replace({"\n": ' '})|trim }}</g:description>
         <link>{{ item.link }}</link>
         {% if item.categoryFullPath is not null -%}
