when a category is removed, affected products are scheduled for visibility recalculation
- ProductAvailabilityCronModule and ProductVisibilityImmediateCronModule
are moved up so it is ensured the recalculations are run before the feeds generation
- see https://github.com/shopsys/shopsys/issues/1763
- just to be sure, mergado feed now accepts null for $category parameter (the category tag is not required in the feed according to https://www.mergado.cz/sites/default/files/users/documents/shopsystems/mergado-product-xml-1-4.pdf)

--- a/templates/Admin/Content/MergadoFeed/feed.xml.twig
+++ b/templates/Admin/Content/MergadoFeed/feed.xml.twig
@@ -20,7 +20,9 @@
             <URL>{{ item.url }}</URL>
         {% endif -%}
         <NAME_EXACT>{{ item.nameExact }}</NAME_EXACT>
-        <CATEGORY>{{ item.category }}</CATEGORY>
+        {% if item.category is not null %}
+            <CATEGORY>{{ item.category }}</CATEGORY>
+        {% endif %}
         {% if item.descriptionShort is not null -%}
             <DESCRIPTION_SHORT>{{ item.descriptionShort }}</DESCRIPTION_SHORT>
         {% endif -%}
