--- a/templates/Front/Layout/header.html.twig
+++ b/templates/Front/Layout/header.html.twig
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="web__container web__container--dark web__container--header">
-        <header class="header {{ block('headerClass') }}" id="top">
+        <header class="header {{ block('headerClass') }}">
             <div class="header__logo">
                 {% block logo %}
                 <a class="logo" href="{{ url('front_homepage') }}">
